<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="mapLayers_array">
        <item>@string/layer_normal</item>
        <item>@string/layer_hybrid</item>
        <item>@string/layer_satellite</item>
        <item>@string/layer_terrain</item>
    </string-array>
    <string name="layer_normal">Normal</string>
    <string name="layer_hybrid">Hybrid</string>
    <string name="layer_satellite">Satellite</string>
    <string name="layer_terrain">Terrain</string>
    <string-array name="dialogPhoto_array">
        <item>@string/photo_camera</item>
        <item>@string/photo_gallery</item>
    </string-array>
    <string name="photo_camera">Camera</string>
    <string name="photo_gallery">Gallery</string>
    <string name="dialogPhotoTitle">Choose photo</string>
    <string name="app_name">Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg_tit">Informação</string>
    <string name="msg_tit_inf">Information</string>
    <string name="msg_conf_del">Delete selected record?</string>
    <string name="msg_del_success">Deleted successfully</string>
    <string name="msg_cannot_del">There are locations associated</string>
    <string name="msg_save_success">Saved successfully</string>
    <string name="msg_not_changed">No changes were made</string>
    <string name="msg_edit_categ">Editing category</string>
    <string name="msg_not_selected">Nothing selected</string>
    <string name="msg_required_categ_design">The name field is required</string>
    <string name="msg_required_country_design">The name field is required</string>
    <string name="msg_required_place_design">The name field is required</string>
    <string name="msg_required_place_categ">The category field is required</string>
    <string name="msg_required_place_country">The country field is required</string>
    <string name="msg_required_place_lat">The latitude field is required</string>
    <string name="msg_required_place_lon">The longitude field is required</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="descr">Description</string>
    <string name="obs">Observation</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="lat_short">Lat.</string>
    <string name="lon_short">Lon.</string>
    <string name="location">Localization</string>
    <string name="num_places">Nº places:</string>
    <string name="city">City</string>
    <string name="categ">Category</string>
    <string name="country">Country</string>
    <string name="new_user">Create user</string>
    <string name="enter">Login</string>
    <string name="menu_add">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_conf">Confirm</string>
    <string name="menu_find">Find</string>
    <string name="menu_wspop">Population</string>
    <string name="menu_wstemp">Temperature</string>
    <string name="menu_categ">Category</string>
    <string name="menu_country">Countries</string>
    <string name="menu_list_by_categ">See by category</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_see_mapa">See on map</string>
    <string name="menu_del_search">Clear filter</string>
    <string name="menu_order_name_asc">Order A - Z</string>
    <string name="menu_order_name_desc">Order Z - A</string>
    <string name="menu_sel_all">Sellect all</string>
    <string name="title_activity_edit_categ">Category</string>
    <string name="title_activity_edit_place">Place</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_list_place">Locations</string>
    <string name="title_activity_list_categ">Categories</string>
    <string name="title_activity_list_places_by_categ">See by categories</string>
    <string name="title_activity_list_places_to_map">Select places</string>
    <string name="title_activity_show_places_map">Map</string>
    <string name="title_activity_list_country">Countries</string>
    <string name="title_activity_edit_country">Country</string>
    <string name="action_settings">Settings</string>
    <string name="get_from_gps">Get by GPS</string>
    <string name="get_from_map">Get by map</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_disabled_info">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_get_locating">Locating#8230;</string>
    <string name="msg_location_not_found">Location not found#8230;</string>
    <string name="msg_map_not_ready">Map not ready#8230;</string>
    <string name="title_activity_show_map">ShowMap</string>
    <string name="title_activity_get_map_position">GetMapPosition</string>
    <string name="title_activity_edit_categ_set_icon">Set point icon</string>
    <string name="point_title">New point</string>
    <string name="point_descr">Location of new point</string>
    <string name="point_number">Number of locations</string>
</resources>