<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search_place_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_find"/>
    <item
        android:id="@+id/menu_search_place_map"
        android:icon="@drawable/ic_menu_map"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_see_mapa"/>
    <item
        android:id="@+id/menu_search_place_del_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_del_search"/>
    <item
        android:id="@+id/menu_search_place_order_asc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_order_name_asc"/>
    <item
        android:id="@+id/menu_search_place_order_desc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_order_name_desc"/>
    <item
        android:id="@+id/menu_search_place_sel_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sel_all"/>

</menu>