<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit_place_delete"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_edit_place_map"
        android:icon="@drawable/ic_menu_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_see_mapa"/>
    <item
        android:id="@+id/menu_edit_place_wspop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_wspop"/>
    <item
        android:id="@+id/menu_edit_place_wstemp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_wstemp"/>
    
</menu>