<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPlace" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/editPlaceBarTop"            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_light_blue"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:id="@+id/editPlacePictureBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dip"
                android:background="@drawable/picture_border"
                android:padding="2dip" >

                <ImageView
                    android:id="@+id/editPlaceImgPhoto"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:onClick="photoClicked"
                    android:src="@drawable/ic_picture" />
            </LinearLayout>

            <TextView
                android:id="@+id/editPlaceLblLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/editPlacePictureBox"
                android:layout_toLeftOf="@+id/editPlaceImgLocation"
                android:gravity="right|center_vertical"
                android:paddingRight="16sp"
                android:paddingTop="4sp"
                android:text="@string/lat_short"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/editPlaceLblLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editPlacePictureBox"
                android:layout_toLeftOf="@+id/editPlaceImgLocation"
                android:gravity="right|center_vertical"
                android:paddingRight="16sp"
                android:paddingTop="4sp"
                android:text="@string/lon_short"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/editPlaceImgLocation"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="locationClicked"
                android:src="@android:drawable/ic_dialog_map" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/editPlaceTxtDesign"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editPlaceTxtDescr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:hint="@string/descr"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editPlaceTxtCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:hint="@string/city"
                android:singleLine="true" />
            
            <Spinner
                android:id="@+id/editPlaceSpCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin" />

            <Spinner
                android:id="@+id/editPlaceSpCateg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin" />
            
            <EditText
                android:id="@+id/editPlaceTxtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:gravity="top|left"
                android:hint="@string/obs"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/editPlaceBtnConf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:clickable="true"
                android:onClick="confClicked"
                android:text="@string/menu_conf" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>