<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCateg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_light_blue"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:id="@+id/editCategPictureBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dip"
                android:background="@drawable/picture_border"
                android:padding="2dip" >

                <ImageView
                    android:id="@+id/editCategImgPhoto"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ic_point_blue" />
            </LinearLayout>

            <TextView
                android:id="@+id/editCategLblTitNumPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/editCategPictureBox"
                android:gravity="right|center_vertical"
                android:paddingTop="4sp"
                android:text="@string/num_places"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/editCategLblNumPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editCategPictureBox"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:paddingTop="4sp"
                android:text="@string/num_places"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/editCategTxtDesign"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editCategTxtDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:gravity="top|left"
                android:hint="@string/descr"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/editCategBtnConf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_vertical_margin"
                android:clickable="true"
                android:onClick="confClicked"
                android:text="@string/menu_conf" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>